--- a/sw/firmware/Makefile
+++ b/sw/firmware/Makefile
@@ -1,7 +1,7 @@
 ##
-## This file is part of the libopencm3 project.
+## This file is part of the simplux project.
 ##
-## Copyright (C) 2009 Uwe Hermann <uwe@hermann-uwe.de>
+## Copyright (C) 2011 Piotr Esden-Tempski <piotr@esden.net>
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
